@@ -4239,43 +4239,6 @@ TkKeysymToString(
 /*
  *----------------------------------------------------------------------
  *
- * TkCopyAndGlobalEval --
- *
- *	This function makes a copy of a script then calls Tcl_GlobalEval to
- *	evaluate it. It's used in situations where the execution of a command
- *	may cause the original command string to be reallocated.
- *
- *	OBSOLETE! NOT USED ANYWHERE IN TK! ONLY FOR STUB TABLE!
- *
- * Results:
- *	Returns the result of evaluating script, including both a standard Tcl
- *	completion code and a string in the interp's result.
- *
- * Side effects:
- *	Any; depends on script.
- *
- *----------------------------------------------------------------------
- */
-
-int
-TkCopyAndGlobalEval(
-    Tcl_Interp *interp,		/* Interpreter in which to evaluate script. */
-    const char *script)		/* Script to evaluate. */
-{
-    Tcl_DString buffer;
-    int code;
-
-    Tcl_DStringInit(&buffer);
-    Tcl_DStringAppend(&buffer, script, -1);
-    code = Tcl_EvalEx(interp, Tcl_DStringValue(&buffer),
-	    Tcl_DStringLength(&buffer), TCL_EVAL_GLOBAL);
-    Tcl_DStringFree(&buffer);
-    return code;
-}
-
-/*
- *----------------------------------------------------------------------
- *
  * TkpGetBindingXEvent --
  *
  *	This function returns the XEvent associated with the currently
