@@ -33,15 +33,6 @@
 #include "tkIntXlibDecls.h"
 
 /*
- * Remove macros that will interfere with the definitions below.
- */
-
-#define Tk_CreateCanvasVisitor \
-    ((void (*)(Tcl_Interp * interp, void * typePtr)) NULL)
-#define Tk_GetCanvasVisitor \
-    ((void * (*)(Tcl_Interp * interp, const char * name)) NULL)
-
-/*
  * WARNING: The contents of this file is automatically generated by the
  * tools/genStubs.tcl script. Any modifications to the function declarations
  * below should be made in the generic/tk.decls script.
@@ -64,7 +55,7 @@ static const TkIntStubs tkIntStubs = {
     TkChangeEventWindow, /* 7 */
     TkClipInit, /* 8 */
     TkComputeAnchor, /* 9 */
-    TkCopyAndGlobalEval, /* 10 */
+    NULL, /* 10 */
     NULL, /* 11 */
     TkCreateCursorFromData, /* 12 */
     TkCreateFrame, /* 13 */
